# MinimizationOfWeaklyConvexFunctions

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  paper_text.txt  pyproject.toml
deliverables/: report.md
experiments/: blind_deconvolution.py  convergence_rate.py  cvar_convex.py  moreau_convergence.py  optimizer_comparison.py  outlier_robustness.py  phase_retrieval.py  phase_transition.py  sparse_phase_retrieval.py  stop_criteria.py
notebooks/: 01_test_env_setup.ipynb  02_main_algorithm_basic_implementation.ipynb  03_add_regularization.ipynb  04_add_mini_batches.ipynb  05_add_closed_form_subproblem_solving.ipynb  06_test_implementation.ipynb  07_add_correct_beta_and_moreau_tracking.ipynb  08_implement_three_methods.ipynb
src/: ModelBasedSolver.py  PhaseRetrievalProblem.py  WeaklyConvexProblem.py  regularizers.py  utils.py
src/problems/: blind_deconvolution.py  max_parabola.py  phase_retrieval.py  robust_regression.py  sparse_phase_retrieval.py
