[project]
name = "weaklyConvexFunctions"
version = "0.1.0"
description = "Optimize weakly convex functions, implementing stochastic proximal-point-like steps"
authors = [
    {name = "nizwant",email = "mateusznizwantowski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "torch>=2.0.0,<3.0.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.0,<3.0",
    "ipykernel>=6.30.1,<7.0.0",
    "matplotlib>=3.10.6,<4.0.0",
    "pre-commit>=4.5.1,<5.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
